Fixed issue where login screen would have scrollbars on Chromium-based browsers

--- a/styles/login.css
+++ b/styles/login.css
@@ -1,6 +1,7 @@
 #loginBody {
     width: 275px;
     margin: 0;
+    overflow: hidden;
 }
 
 #loginNotice {
